--- a/src/components/WorkProcess/WorkProcess.css
+++ b/src/components/WorkProcess/WorkProcess.css
@@ -1,3 +1,14 @@
 .vid__container{
     margin-top: 40px;
 }
+
+.player-wrapper {
+    position: relative;
+    padding-top: 56.25%; /* Player ratio: 100 / (1280 / 720) */
+  }
+  
+  .react-player {
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
